--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@types/react-dom": "^19.1.6",
     "@types/redux": "^3.6.31",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.35.0",
     "@vitejs/plugin-react": "^4.5.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "gh-pages": "^6.3.0",
@@ -36,7 +39,7 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.3",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.34.1",
+    "typescript-eslint": "^8.35.0",
     "vite": "^7.0.0"
   }
 }
